--- a/unity_frontend/.vscode/settings.json
+++ b/unity_frontend/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "studyDen.sln"
+    "dotnet.defaultSolution": "unity_frontend.sln"
 }
